# Musical-player

./: Album.cpp  Album.h  AlbumSelectionDialog.cpp  AlbumSelectionDialog.h  AlbumSettingsDialog.cpp  AlbumSettingsDialog.h  CMakeLists.txt  Dockerfile  Music.cpp  Music.h  MyApp.cpp  MyApp.h  MyFrame.cpp  MyFrame.h  MyFrameIDs.h  PlayerManager.cpp  PlayerManager.h  PlayingQueue.cpp  PlayingQueue.h  README.md  SearchResultsDialog.cpp  SearchResultsDialog.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp  test_PlayerManager.cpp
